# hackathon_bot

./: .env.example  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements5551.txt
ML/: Anomaly.ipynb  anomaly_visualization.py
src/: main.py
src/bot/admin_panel/: admin_kb.py
src/bot/admin_panel/routers/: add_check_list.py  add_person.py  del_person.py  panel.py  schedule_work.py
src/bot/application/repositories/: checklist_repository.py  inspection_repository.py  schedule_repository.py  user_repository.py
src/bot/application/use_cases/: user.py
src/bot/domain/entities/: user.py
src/bot/infrastructure/db/: mongo_client.py  postgra_client.py  processing_database_queries.py
src/bot/infrastructure/db/alembic/: env.py
src/bot/infrastructure/db/alembic/versions/: 1309ed3b026a_create_users_table.py
src/bot/infrastructure/db/models/: models.py
src/bot/main/: main.py  requirements6378565.txt
src/bot/main/admin_panel/: admin_kb.py
src/bot/main/admin_panel/routers/: add_check_list.py  add_person.py  del_person.py  panel.py  schedule_work.py
src/bot/main/keyboards/: keyboards.py
src/bot/main/middleware/: middleware.py
src/bot/start_logic/: start_panel.py
